--- a/slides/slides_documentation.Rmd
+++ b/slides/slides_documentation.Rmd
@@ -28,6 +28,7 @@ options(htmltools.dir.version = FALSE)
 - Explain parts of your code with __comments__
 
 - Explain what to install and how to get started in your __readme__
+
 - Explain in-depth use of your code in a __notebook__
 
 
@@ -44,11 +45,13 @@ They:
 - **do not** replace readable or structured code
 
 - (in a specific structure) can be used to directly generate documentation for users.
+
+.footnote[Comic source: [Geek & Poke](https://geekandpoke.typepad.com/geekandpoke/2011/06/code-commenting-made-easy.html)]
 ]
 
 .pull-right[
 ![comments](https://geekandpoke.typepad.com/.a/6a00d8341d3df553ef015432bf9167970c-800wi)
-[Geek & Poke](https://geekandpoke.typepad.com/geekandpoke/2011/06/code-commenting-made-easy.html)
+
 ]
 ---
 
@@ -56,7 +59,7 @@ They:
 
 - ...to repeat in natural language what is written in your code
 
-```R
+```r
 # Now we check if the age of a patient is greater than 18
 if(agePatient > 18)
 
@@ -64,7 +67,7 @@ if(agePatient > 18)
 --
 - ...to turn old code into zombie code (fine for troubleshooting, but do not leave it in!)
 
-```R
+```r
 # Do not run this!!
 # itDoesNotWork <- optimizeMulticoreDeepLearning(myProteins)
 # if(itDoesNotWork == 1444){
@@ -74,7 +77,7 @@ if(agePatient > 18)
 --
 - ...to replace version control, like git
 
-```R
+```r
 
 # removed on August 5
 # if() ...
@@ -96,57 +99,82 @@ num_rows = np.max([index_level.size for index_level in self.new_index_levels])
 num_columns = self.removed_level.
 ```
 *From [Pandas reshape.py documentation](https://github.com/pandas-dev/pandas/blob/master/pandas/core/reshape/reshape.py)*
-
-
 ---
-
-
 # Docstrings
 
-- Structured comments, associated to *segments* (rather than lines) of code can be used to generate documentation for users*  of your project.
+- Structured comments, associated to *segments* (rather than lines) of code, can be used to generate documentation for users*  of your project.
 
 - These comments are called *docstrings*.
 
-- Docstrings, unlike regular comments, are parsed by the interpreter, and can be used as code metadata.
+- Docstrings are parsed as the first statement of a module (e.g. a function or class).
 
 - Docstrings allow you to provide documentation to a function, that is relevant to the user of that function.
 
-
+- Writing docstrings makes you generate your documentation as you are generating the code: efficiently, comprehensively!
 
 
 .footnote[*) Remember? That's probably you!]
 ---
 # Generating docstrings
+In R you will need a separate package to deal with docstrings:
 
+.pull-left[
+```r
+library(docstring)
 
+multiply <- function(x,y){
+  #' @title Multiply two numbers
+  #' @description This function takes two 
+  #' input numbers and multiplies
+  #' them. It returns the multiplied result.
+  #' @param x The first value
+  #' @param y The second value
+  #' @return The two arguments multiplied.
+  
+  return(x*y)
+}
+
+?multiply
+```
+]
+--
+.pull-right[![R example](images/screenshots/r_documentation.png)
+
+]
+
+*Much more information in the [vignette for docstring.](https://cran.r-project.org/web/packages/docstring/vignettes/docstring_intro.html)*
 
 ---
+# Generating docstrings
+In Python, docstrings are string literal comments following a function declaration:
+
+```python
+def multiply(x,y):
+  """
+  Multiply two numbers
+  
+  This function takes two input numbers and multiplies them.
+  It returns the multiplied result.
+  Keyword arguments:
+  x -- the first value
+  y -- the second value
+  """
+  return x*y
+```
+NB: a triple single quote (`'''`) works, but PEP style prefers double quotes for docstrings.
+---
+
 # A glimpse into code generation
 
-- Need additional tools:
+Docstrings are formatted so that they can easily be turned into documentation of your package.
+
+You will need additional tools:
 
   * http://www.doxygen.nl/ : c++ (and many more languages)
   * http://www.sphinx-doc.org/ : Python
   * https://roxygen2.r-lib.org/ : R
 
-An example with Roxygen:
-
-```R
-#' A function that says hello
-#'
-#' @return Nothing
-#' @export
-#' @examples
-#' hello()
-
-hello <- function() {
-  print("Hello, world!")
-}
-```
-
-Note the special symbols which differ from standard comment lines.
-
-Namely, the #' and @ : these are special symbols that are recognized by
+We will not do this today, but it is worth checking out if you want to release your code!
 ---
 # A glimpse into code generation
 
@@ -157,7 +185,7 @@ roxygen2::roxygenise()
 ```
 
 .pull-left-larger[
-The commande above will create documentation files that can be visualized by calling help(your package)
+The command above will create documentation files that can be visualized by calling help(your package)
 ]
 
 .pull-right-smaller[
@@ -167,8 +195,26 @@ The commande above will create documentation files that can be visualized by cal
 ]
 
 .footnote[
-__Remark__ This works for R packages, with the proper file structure see here : http://r-pkgs.had.co.nz/intro.html
+__NB__ This works for R packages, with the proper file structure. See here: http://r-pkgs.had.co.nz/intro.html
 ]
+
+---
+# Your turn (choose 1 or 2 to start)
+
+####1. Comment lines
+  
+a. Do you have superfluous comments?
+   - Remove your zombie code and version control-like comments
+   - See if you can replace a 'how' comment for a 'why' comment (_what is the purpose of this code?_ rather than _this is how this code works_)
+
+b. Are there elements without comments that need them?
+  - As you have been working with your code today, if you found yourself staring at a piece of code for too long without understanding it: perhaps it needs more information.
+  - Keep doing this as you work on refactoring your code!
+  
+  
+####2. Docstrings
+- Add a docstring to a function, preferably the last function you worked on (so it's fresh in your memory).
+- Keep in mind: what does my user need to know when they are working with this function?
 
 ---
 # Readme
@@ -269,10 +315,7 @@ All chunck can be run at the same time
 
 ---
 # Your turn!
-- Do you have any "bad" comments in your code : remove or edit them
-  - Unecessary
-  - Deactivated code
-  - Git like comments
+
 - Make a readme explaining What people should know to run your code again
   - Install extra tools, dependencies
   - Which environment (Python? R? and which version)
