added examples of readmes

--- a/slides/slides_documentation.Rmd
+++ b/slides/slides_documentation.Rmd
@@ -241,11 +241,17 @@ The contents typically include one or more of the following:
 ---
 # Readme examples and templates
 
-Examples from projects with high quality documentation:
-- Pandas: https://github.com/pandas-dev/pandas
-- Scikit-learn : https://github.com/scikit-learn/scikit-learn
-- Tidyverse [Dplyr](https://github.com/tidyverse/dplyr)
-- e-science center ['McFly' tool](https://github.com/NLeSC/mcfly)
+Some examples from projects with high quality documentation:
+
+Bigger community software projects:
+- Python's [Pandas](https://github.com/pandas-dev/pandas)
+- [Scikit-learn](https://github.com/scikit-learn/scikit-learn)
+- Tidyverse's [Dplyr](https://github.com/tidyverse/dplyr)
+
+Research software:
+- e-science center's ['McFly' tool](https://github.com/NLeSC/mcfly)
+- Utrecht University's [Automatic Systematic Review](https://github.com/msdslab/automated-systematic-review)
+- Utrecht University's [MICE](https://github.com/stefvanbuuren/mice)
 
 
 Templates and ideas:
@@ -275,6 +281,7 @@ Make sure to include the following information:
 - How do you start running your project?
   - How does the user download your project? (consider `git clone`!)
   - How does the user call the main script(s) that should be executed?
+
 
 ---
 # Notebooks
