--- a/slides/slides_code-quality.Rmd
+++ b/slides/slides_code-quality.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Code Quality and Documentation"
-author: "Best Practices for Writing Reproducible Code // part 3"
+title: "Code Quality"
+author: "Best Practices for Writing Reproducible Code // part 2"
 output:
   xaringan::moon_reader:
     css: [default, metropolis, metropolis-fonts, 'custom.css']
