--- a/slides/slides_code-quality.Rmd
+++ b/slides/slides_code-quality.Rmd
@@ -161,8 +161,9 @@ Before software can be reusable, it first has to be usable.]
 # Code reusability: some guidelines
 
 - Separate code and data
+
   - consider using a config file for project-specific (meta)data
-  - but DO hard-code unchanging variables, e.g. `gravity = 9.80665`, once.
+  - but DO hard-code unchanging variables, e.g. `gravity = 9.80665`, **once**.
   
 --
 - Do One Thing (and do it well)
@@ -265,20 +266,14 @@ def my_function(param_a, param_b):
   else:
     do_something_else(param_a)
 ```
-
 ---
 # Code robustness
 
-- Make assumptions and expectations explicit.
-  - check values before processing them
-  - identify exceptions
+![errormanagement](images/errormanagement_implicit.svg)
+---
+# Code robustness
 
-- Produce errors when expectations are not met.
-
-- Consider error options, and perform error management:
-  - redirect the program
-  - log the error
-  - abort
+![errormanagement](images/errormanagement_explicit.svg)
 
 ---
 # Code robustness
@@ -286,33 +281,70 @@ def my_function(param_a, param_b):
 ![errormanagement](images/errormanagement.svg)
 
 ---
-# Towards defensive programming
+# Code robustness
 
-- Error management
- - Check values before processing them
-  - Make use of try/catch mechanisms to manage exceptions
-  - Make use of logging tools instead of print functions
+#### Protect the user with error management:
 
-- *About errors* : Do not expect users to treat your code like you expected, so expect the worst
- - use of wrong input values using your functions
- - data types
- - malformed text input
+- Make assumptions and expectations explicit.
+  - check values before processing them
+  - identify and manage exceptions
+- Produce errors when expectations are not met.
+- Consider error options, and perform error management:
+  - redirect the program
+  - log or report the error, to allow the user (or developer) to troubleshoot
+  - if necessary: abort the run
+--
 
-- Make use of systematic tests
- - Unit testing (event if you work alone on your code)
- - Continuous integration (if many authors work on code)
+#### Protect the developer with tests:
+- Use errors and error management to test expected behavior
+- Capture unexpected errors to identify options for error management
 
 ---
-# Error management
+# Expectations
 
-- Check values with if/else
+#### Expect the worst
+- use of wrong input values for functions
+- malformed text input
+- wrong data types
 
+####
+
+
+---
+#Throwing errors
+
+In Python:
+```{python}
+def read_vector_value(index=0):
+    my_vector = [10,5,4,12,25]
+    
+    if index > len(my_vector) - 1:
+        raise IndexError('Index cannot be higher than length of the vector ')
+    
+    return my_vector[index]
+```
+
+In R:
+```{R}
+read_vector_value <- function(index=1){
+  my_vector <- c(10,5,4,12,25)
+  
+  if(index>length(my_vector)){
+    stop("Index cannot be higher than length of the vector")
+  }
+return(my_vector[index])
+}
+```
+
+---
+
+With if/else:
 ```python
 if not protein_data:
   raise ValueError("Dataset cannot be empty")
 ```
 
-- With try catch (called except in Python)
+With try catch (called `except` in Python):
 
 ```python
 try:
@@ -330,26 +362,7 @@ finally:
   - raise an error in case an argument is out of the range of acceptable values
   - Example (in python)
   
-```{python}
-def read_vector_value(index=0):
-    my_vector = [10,5,4,12,25]
-    
-    if index > len(my_vector) - 1:
-        raise IndexError('Index cannot be higher than length of the vector ')
-    
-    return my_vector[index]
-```
-  - Example (in R)
-```{R}
-read_vector_value <- function(index=1){
-  my_vector <- c(10,5,4,12,25)
-  
-  if(index>length(my_vector)){
-    stop("Index cannot be higher than length of the vector")
-  }
-return(my_vector[index])
-}
-```
+
 ---
 # Using the read_vector_value function
 - Good call
